# easykf

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README  README.md  easykf.pc.cmake  easykf.pc.in  index.html  params.json
CMakeModules/: FindGSL.cmake
doc/: CMakeLists.txt  Doxyfile.in
doc/eps/: Makefile.am  Makefile.in
doxygen/: annotated.html  classekf_1_1EvolutionAnneal-members.html  classekf_1_1EvolutionAnneal.html  classekf_1_1EvolutionNoise.html  classekf_1_1EvolutionRLS.html  classekf_1_1EvolutionRobbinsMonro.html  classes.html  classukf_1_1parameter_1_1EvolutionAnneal-members.html  classukf_1_1parameter_1_1EvolutionAnneal.html  classukf_1_1parameter_1_1EvolutionNoise-members.html  classukf_1_1parameter_1_1EvolutionNoise.html  classukf_1_1parameter_1_1EvolutionRLS-members.html  classukf_1_1parameter_1_1EvolutionRLS.html  classukf_1_1parameter_1_1EvolutionRobbinsMonro-members.html  classukf_1_1parameter_1_1EvolutionRobbinsMonro.html  classukf_1_1samples_1_1DistributionSample__1D.html  classukf_1_1samples_1_1DistributionSample__2D-members.html  classukf_1_1samples_1_1DistributionSample__2D.html  classukf_1_1samples_1_1MaximumIndexes__1D.html  classukf_1_1samples_1_1MaximumIndexes__2D.html  classukf_1_1samples_1_1RandomSample__1D-members.html  classukf_1_1samples_1_1RandomSample__1D.html  classukf_1_1samples_1_1RandomSample__2D-members.html  classukf_1_1samples_1_1RandomSample__2D.html  classukf_1_1samples_1_1RandomSample__3D.html  classukf_1_1state_1_1EvolutionAnneal-members.html  classukf_1_1state_1_1EvolutionAnneal.html  classukf_1_1state_1_1EvolutionNoise-members.html  classukf_1_1state_1_1EvolutionNoise.html  classukf_1_1state_1_1EvolutionRLS-members.html  classukf_1_1state_1_1EvolutionRLS.html  classukf_1_1state_1_1EvolutionRobbinsMonro.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  ekf_8h.html  ekf_8h_source.html  ekf__types_8h.html  ekf__types_8h_source.html  example-001_8cc-example.html  example-003_8cc-example.html  example-004_8cc-example.html  (+57 more)
doxygen/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_4.js  all_5.js  all_7.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  defines_0.js  files_0.js  functions_3.js  functions_4.js  functions_6.js  namespaces_0.js  variables_0.js  variables_1.js  variables_11.js  variables_14.js  variables_17.js  variables_2.js  variables_4.js  variables_6.js  variables_7.js  variables_9.js  variables_a.js  variables_f.js
examples/: CMakeLists.txt  example-001.cc  example-002.cc  example-003.cc  example-004.cc  example-005.cc  example-006.cc  example-007.cc  example-008.cc  example-009.cc
examples/Data/: Mackay-inputs.data  Mackay-outputs.data  plot-example-003.gplot  plot-example-005.gplot  plot-example-006.py  plot-example-007.gplot
src/: CMakeLists.txt  easykf.h  ekf.h  ekf_types.h  main.cpp  pyeasykf.cpp  ukf.h  ukf_math.h  ukf_parameter_ndim.h  ukf_parameter_scalar.h  ukf_samples.h  ukf_sr_state_ndim.h  ukf_state_ndim.h  ukf_types.h
stylesheets/: stylesheet.css
